# makmath

./: .env.example  .gitignore  CourseWork2.docx  README.md  conftest.py  db_for_test.sqlite3  main.py  pyproject.toml  pytest.ini  Презентация1.pptx
makmat/: asgi.py  settings.py  wsgi.py
makmath/: db.sqlite3  manage.py
makmath/makmath/: asgi.py  settings.py  urls.py  wsgi.py
makmath/templates/admin/: base_site.html
makmath/topics/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
makmath/topics/migrations/: 0001_initial.py  0002_alter_topic_content.py  0003_auto_20211119_1150.py  0004_auto_20211119_1203.py  0005_auto_20211119_1309.py  0006_task.py  0007_alter_topic_content.py  0008_auto_20211120_1240.py  0009_auto_20211120_1343.py  0010_section_slug.py  0011_topic_slug.py  0012_taskcomplition.py  0013_auto_20211203_1947.py
makmath/topics/static/topics/css/: authentication_style.css  (+4 more)
makmath/topics/templates/topics/: about.html  authorization.html  base.html  index.html  registration.html  section.html  topic.html  user_cabinet.html
makmath/topics/templatetags/: topics_tags.py
makmath/topics/tests/: test_section_model.py  test_task_model.py  test_topic_model.py  test_url.py  test_util_analizer.py  test_util_stat_manager.py
makmath_frontend/: README.md  package-lock.json  package.json
makmath_frontend/src/: App.jsx  index.css
makmath_frontend/src/components/FeatureScene/: FeatureScene.module.css
makmath_frontend/src/components/Header/: Header.module.css
makmath_frontend/src/pages/AuthorizationPage/: AuthorizationPage.module.css
(+2 files in other folders)
