[project]
name = "makmath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-ckeditor>=6.7.3",
    "django-cors-headers>=4.4.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.2.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "djangorestframework-simplejwt>=5.3.0",
]
